fix reality button getting stuck

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1077,13 +1077,17 @@ br {
 
 .videocontainer {
     position: fixed;
-    z-index: -1000;
     top: 0;
     bottom: 0;
     width: 100%;
     height: 100%;
+    z-index: 1;
     overflow: hidden;
     pointer-events: none;
+}
+
+.videocontainer--background {
+  z-index: -1000;
 }
 
 #realityanimbg {
